# auto-editor

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  MANIFEST.in  README.md  README_GUI.md  README_zh.md  VISION.md  ae.nimble  auto-editor.py  auto_editor_gui.py  batch.sh  batch.txt  config.nims  example.json  fastAudio.py  generate_test_video.py  install_mac.md  install_win.md  nim.cfg  out.xml  pyproject.toml  requirements.txt  setup.py  shorts.cmd  smartcut-compare.cmd  test.pal  test.py  test_turkish_transcribe.sh  test_unit.sh  video.py  口播最佳实践命令
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  crash_report.md  desync.md  feature_request.md  other.md  question_or_info.md
.github/workflows/: build.yml  ff-publish.yaml  python-publish.yml  smoke.yml  test-program.yml
ae-ffmpeg/: README.md  setup.py
ae-ffmpeg/ae_ffmpeg/: __init__.py
articles/: branding.md  contributeBeginner.md  editing.md  howToEdit.md  installing.md  legalinfo.md  motionDetection.md  new.md  rangeSyntax.md  rectangleEffect.md  subcommands.md  zooming.md
auto_editor/: __init__.py  __main__.py  advancedVideo.py  analyze.py  argsCheck.py  cli.py  config.txt  create.py  cutting.py  cvVideo.py  edit.py  editor.py  fastAudio.py  fastVideo.py  ffwrapper.py  ffwrapper_BAK.py  ffwrapper_flat.py  generateTestMedia.py  help.json  help.py  info.py  interpolate.py  interpreter.py  json.py  levels.py  makeCutList.py  make_layers.py  mediaMetadata.py  method.py  motion.py  objects.py  originalMethod.py  output.py  parser.py  premiere.py  preview.py  renderVideo.py  renderWaveform.py  resolve.py  sheet.py  (+8 more)
auto_editor/analyze/: audio.py  generic.py  helper.py  motion.py  pixeldiff.py  random.py
auto_editor/audiotsm2/: __init__.py  analysis_synthesis.py  array.py  ola.py  phasevocoder.py  wsola.py
auto_editor/cmds/: cache.py  desc.py  info.py  levels.py  palet.py  repl.py  subdump.py  test.py
auto_editor/exports/: fcp11.py  fcp7.py  json.py  kdenlive.py  shotcut.py
auto_editor/formats/: fcp11.py  fcp7.py  final_cut_pro.py  json.py  make_json.py  premiere.py  shotcut.py  timeline.py  utils.py
auto_editor/imports/: fcp7.py  json.py
auto_editor/lang/: json.py  libintrospection.py  libmath.py  palet.py  stdenv.py
auto_editor/lib/: contracts.py  data_structs.py  err.py
auto_editor/objs/: edit.py  export.py  tl.py  util.py
auto_editor/render/: audio.py  av.py  av_parellel.py  image.py  opencv.py  subtitle.py  utils.py  video.py
auto_editor/scipy/: LICENSE.txt  wavfile.py
auto_editor/subcommands/: chunks.py  create.py  desc.py  grep.py  info.py  levels.py  mpeg.py  palet.py  repl.py  subdump.py  test.py
auto_editor/utils/: bar.py  chunks.py  cmdkw.py  container.py  effects.py  encoder.py  func.py  interpolate.py  log.py  progressbar.py  subtitle_tools.py  types.py  video.py
changelogs/: 2022.md  2023.md  2024.md  changelog-22w37a.md  changelog-22w39a.md  changelog-22w43a.md  changelog-22w46a.md  changelog-22w48a.md  changelog-22w52a.md  changelog-23w04a.md  changelog-23w08a.md  changelog-23w10c.md  changelog-23w11a.md  changelog-23w12a.md  changelog-23w15a.md  changelog-23w20a.md  changelog-23w20b.md  changelog-23w21a.md  changelog-23w24a.md  changelog-23w28a.md  changelog-23w31a.md  changelog-23w32a-dev.md  changelog-23w32a.md  changelog-23w35a.md  changelog-23w38a.md  changelog-23w43a.md  changelog-23w51a.md  changelog-24w03a.md  changelog-24w07a.md
cmake/: aarch64-w64-mingw32.cmake
docs/: .gitignore  404.html  Makefile  README.md  build.py  doc.pal  gen_options.nims  go.sh  hunim.toml  make.nim  mdGen.nim  package.json  server.js
docs/components/: cls_center.css  core_style.css  gen_actions.nims  gen_edit.nims  gen_options.nims  head_icon.html  header.html  headerdesc.html  init_head.html  nav.html
docs/src/: 404.html  index.html  index.xml  installing.html  installing.md  robots.txt  runner.js  style.css  v3.md  wasm.html
docs/templates/: default.html
github resources/: docs.md  install_lin.md  install_mac.md  install_win.md
patches/: ffmpeg.patch  whisper.patch  x264.patch  x265.patch
resources/: 0.1-non-zero-start.json  CHANGELOG.md  CREDITS.md  aac.m4a  alac.m4a  docs.md  example_0.5_speed.npz  example_1.5_speed.npz  generate_test_video.py  install_lin.md  install_mac.md  install_win.md  installing.md  legalinfo.md  motionDetection.md  test.mkv  test_attachment.txt  testsrc.mkv  testsrc_with_attachment.mkv  version.txt  webvtt.mkv
scripts/: __main__.py  aarch64-w64-mingw32.txt  arm-linux-gnueabihf.cmake  arm-linux-gnueabihf.txt  fastAudio.py  fastVideo.py  fastVideoPlus.py  originalAudio.py  originalMethod.py  originalVid.py  premiere.py  preview.py  readAudio.py  shorts.ps1  smartcut-compare.ps1  unix-ffmpeg.REMOVED.git-id  unix-ffprobe.REMOVED.git-id  usefulFunctions.py  wasm32-emcc.txt  wasm64-emcc.txt  wavfile.py  x86_64-w64-mingw32.cmake  x86_64-w64-mingw32.txt
site/: README.md  basswood.py  blog_gen.nim  build  build.nim  build.py  paletdoc.pt  paletdoc.py
src/: about.nim  action.nim  ae_speech.swift  av.nim  cache.nim  cli.nim  conductor.nim  edit.nim  editlexer.nim  editmethods.nim  editparse.nim  ffmpeg.nim  graph.nim  license.nim  log.nim  main.nim  media.nim  mic.nim  preview.nim  resampler.nim  stats.nim  throttle.nim  timeline.nim  transcribe.nim  wavutil.nim  whisper_stream.c
tests/: ffwrapper.py  log.py  rationals.nim  test.py  unit.nim  vanparse.py
web/: app.js  index.html
(+188 files in other folders)
